# twitterclone

./: README.md  pyproject.toml
authentication/: forms.py  views.py
bigapp/: admin.py  forms.py  models.py  views.py
bigapp/migrations/: 0001_initial.py  0002_auto_20210301_1722.py
bigproject/: asgi.py  settings.py  urls.py  wsgi.py
notification/: admin.py  models.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20210309_0046.py
templates/: general_form.html  index.html  notifications.html  tweet_view.html  user_view.html
tweet/: forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_posted_by.py  0002_tweet_tweet_count.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  apps.py  forms.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_auto_20210302_1711.py  0003_twitteruser_following.py
