[tool.poetry]
name = "twitterclone-amandalynnes"
version = "0.1.0"
description = ""
authors = ["Amanda Simmons <carpe737diem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
